--- a/client/src/components/CreateGroupButton/creategroupbutton.css
+++ b/client/src/components/CreateGroupButton/creategroupbutton.css
@@ -1,14 +1,9 @@
-.find-group-box {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    background-color: white;
+.create-group-box {
     height: 260px;
     width: 800px;
     border: 20px solid rgba(247, 231, 206, 1);
-    text-align: center;
-    margin-top: 73px;
     align-self: center;
+    margin-top: 73px;
 }
 
 .slogan {
@@ -17,9 +12,10 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     align-self: center;
+    margin-top: 10px;
 }
 
-.create-group {
+/* .create-group {
     background-color: rgba(255, 191, 0, 1);
     width: 295px;
     height: 88px;
@@ -28,4 +24,12 @@
     align-self: center;
     font-weight: bolder;
     margin-top: 10px;
+} */
+
+.btn-primary {
+    width:295px;
+    height: 88px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    align-self: center;
 }
