--- a/client/src/pages/FindEatery/FindEatery.css
+++ b/client/src/pages/FindEatery/FindEatery.css
@@ -1,42 +1,26 @@
-/** temporary styles, change in future */
-
 .wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  flex-direction: column;
-  margin: 20px;
 }
 
-.card-container {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  background-color: lightgray;
+.container {
+  border: 2px solid black;
   border-radius: 10px;
-}
-
-.card-imagebox {
   position: relative;
-  height: 60vh;
-  width: 70vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 50vw;
+  height: 80vh;
   overflow: hidden;
-  border-radius: 10px;
+  padding: 0;
 }
 
-.imagebox-image {
-  flex-shrink: 0;
+.container h1 {
+  font-weight: 600;
+}
+
+.container img {
   min-width: 100%;
   min-height: 100%;
-}
-
-.card-description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .imagebox-text {
@@ -49,7 +33,33 @@
   padding: 5px 20px;
 }
 
-.price {
-  font-size: larger;
-  color: rgb(0, 154, 0);
+.address span {
+  padding-left: 0.3rem;
+}
+
+.want-button {
+  border-radius: 0.5rem;
+  padding: 5px;
+  background-color: rgb(254, 214, 214);
+}
+
+.skip-button {
+  background-color: gainsboro;
+  border-radius: 0.5rem;
+  padding: 5px;
+  margin: 15px 0;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  opacity: 1;
+  transition: 0.3s;
+}
+
+.hover-effect:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
