--- a/client/src/pages/Navigation/Navigation.css
+++ b/client/src/pages/Navigation/Navigation.css
@@ -7,6 +7,7 @@ nav {
   padding: 0 100px;
   font-size: 1.05rem;
   background-color: rgb(212, 45, 45);
+  /* background-color: #dc2626; */
   height: 80px;
   width: 100%;
 }
