--- a/client/src/pages/Navigation/Navigation.css
+++ b/client/src/pages/Navigation/Navigation.css
@@ -6,7 +6,7 @@ nav {
   align-items: center;
   padding: 0 100px;
   font-size: 1.05rem;
-  background-color: rgb(212, 45, 45);
+  background-color: #d42d2d;
   /* background-color: #dc2626; */
   height: 80px;
   width: 100%;
