--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,20 @@
+/* html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+} */
+
 #root {
   min-height: 100vh;
   display: flex;
@@ -15,4 +32,8 @@
   padding: 1rem 2rem;
   flex-grow: 1;
   height: calc(100vh - 80px);
+}
+
+ul {
+  margin-bottom: 0;
 }
