--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
-.home-wrapper {
+.container {
   height: 100%;
   padding: 0 10%;
   display: flex;
@@ -8,55 +8,49 @@
   align-items: center;
 }
 
-.home-wrapper button {
-  padding: 5px 20px;
+.button {
+  padding: 8px 20px;
   background-color: rgb(239, 159, 94);
+  border-radius: 0.5rem;
 }
 
-.home-wrapper h1 {
+.title {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
 }
 
-.home-wrapper p {
+.description {
   padding-right: 30%;
   margin-bottom: 30px;
 }
 
-.img-box {
+.box {
   height: 100%;
   display: flex;
   align-items: center;
 }
 
-.img-box img {
+.box img {
   z-index: 0;
 }
 
-.food-img-box {
+.food {
   display: flex;
+  height: 8rem;
+  margin-top: 2rem;
 }
 
-.food-img-box img {
+.food img {
   padding-top: 20px;
   height: 150px;
 }
 
-.red-circle {
+.background {
   position: absolute;
   bottom: 0;
   right: 0;
   border-radius: 50% 0 0 0;
   height: 60vh;
   width: 45vw;
-  background-color: lightcoral;
-}
-
-.red-square {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  height: 500px;
-  width: 500px;
   background-color: lightcoral;
 }
