--- a/client/src/pages/ResultsPage/ResultsPage.css
+++ b/client/src/pages/ResultsPage/ResultsPage.css
@@ -1,10 +1,23 @@
+.results-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .external-redirect-button {
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  text-align: center;
   text-decoration: none;
   color: black;
   font-size: 2.5rem;
   background-color: lightsalmon;
-  border: 0.5rem solid red;
+  border: 0.5rem solid rgba(247, 231, 206, 1);
   border-radius: 1rem;
   padding: 10px;
+}
+
+.external-redirect-button:hover {
+  text-decoration: none;
+  color: inherit;
 }
