Redesign and make responsive for login page

--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   width: 25vw;
   background-color: #f87171;
   padding: 20px;
@@ -27,4 +27,4 @@
   width: 80%;
   height: 70%;
   font-weight: bold;
-}
+} */
