--- a/client/src/pages/Group/Group.css
+++ b/client/src/pages/Group/Group.css
@@ -33,11 +33,11 @@ button {
 button:hover {
   opacity: 0.6;
 }
-
+/* 
 input:valid {
   border: 2px solid green;
 }
 
 input:invalid {
   border: 2px solid red;
-}
+} */
