--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -43,6 +43,7 @@
   width: 100%;
   background-color: rgb(255, 56, 92);
   border: none;
+  transition: opacity 0.3s;
 }
 
 .btn:disabled {
@@ -52,14 +53,21 @@
   border: none;
 }
 
-.btn:hover {
-  opacity: ;
+.btn:hover,
+.btn:active,
+.btn:focus {
+  background-color: rgb(255, 56, 92);
+  opacity: 0.6;
 }
 
 .signup {
   text-align: center;
   margin-top: 2rem;
   padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .link {
@@ -73,5 +81,9 @@
 @media (min-width: 768px) {
   .link {
     display: inline-block;
+  }
+
+  .signup {
+    flex-direction: row;
   }
 }
