--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 
 .header {
-  background-color: #d42d2d;
+  background-color: #d04451;
   display: flex;
   justify-content: center;
 }
