Add responsiveness to lobby page and basic design

--- a/client/src/components/ExitGroupButton/ExitGroupButton.module.css
+++ b/client/src/components/ExitGroupButton/ExitGroupButton.module.css
@@ -1,3 +1,13 @@
+.exit {
+  height: 50px;
+  width: 50px;
+}
+
 .btn {
-  color: black;
+  border: none;
+  background-color: inherit;
+}
+
+.btn:hover {
+  background-color: red;
 }
