--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -1,13 +1,16 @@
-
+/* .loader-wrapper {
+  height: 100%;
+  width: 100%;
+} */
 
 .loader-text {
-    font-family: "Montserrat", sans-serif;
-    color: #d42d2d;
+  font-family: "Montserrat", sans-serif;
+  color: #d42d2d;
 }
 
 .loader {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: lightcoral;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: lightcoral;
 }
