--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -50,6 +50,10 @@
 
 .button {
   padding: 15px 30px;
+  width: 200px !important;
+  height: 80px !important;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder !important;
   background-color: rgb(239, 159, 94);
   border-radius: 0.5rem;
 }
