--- a/client/src/pages/Lobby/ChatBox/ChatBox.module.css
+++ b/client/src/pages/Lobby/ChatBox/ChatBox.module.css
@@ -5,10 +5,8 @@
   max-width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   border: 2px solid black;
   border-radius: 0.5rem;
-  overflow: hidden;
 }
 
 .header {
@@ -45,7 +43,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  flex: 1;
+  flex: 1 1 1px;
   overflow-y: scroll;
 }
 
