--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -47,10 +47,7 @@
 }
 
 .btn:disabled {
-  background-color: #e5e5e5;
-  color: #78716c;
   font-weight: 600;
-  border: none;
 }
 
 .btn:hover,
@@ -80,7 +77,7 @@
 .link {
   display: block;
   font-weight: bold;
-  color: #ef4444;
+  color: #f59e0b;
   text-decoration: none;
   padding-left: 5px;
 }
