--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -1,7 +1,7 @@
-/* .loader-wrapper {
+.loader-wrapper {
   height: 100%;
   width: 100%;
-} */
+}
 
 .loader-text {
   font-family: "Montserrat", sans-serif;
