--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 
 .header {
+  /* position: fixed;
+  top: 0; */
   background-color: #d04451;
   display: flex;
   justify-content: center;
